...
			<View
				testID="confirmPasswordScreen"
				className="flex top-1/4 justify-center items-center bg-white mx-8 pb-4 rounded-lg"
			>
				<Text
					className="text-2xl font-bold pt-4"
					testID="confirmPasswordScreenTitle"
				>
					Confirm Password
				</Text>
				<Text className="text-sm text-gray-500 pt-4">
					Enter the code sent to your email
				</Text>
...
						/>
					),
				)}
				<SubmitButton
					label="Change Password"
					onPress={handleSubmit(onSubmit)}
					testID="confirmPasswordSubmitButton"
				/>
			</View>
		</BackgroundWrapper>
	);
};

...
