...
				testID="confirmUserScreen"
				className="flex top-1/4 justify-center items-center bg-white rounded-lg mx-8 pb-4"
			>
				<View className="flex justify-center items-center pb-10">
					<Text
						className="text-2xl font-bold pt-4"
						testID="confirmUserScreenTitle"
					>
						Confirm User
					</Text>
					<Text className="text-sm font-medium py-2">
						Enter the code sent to your email
					</Text>
...
						/>
					),
				)}
				<SubmitButton
					label="Confirm"
					onPress={handleSubmit(onSubmit)}
					testID="confirmUserSubmitButton"
				/>
			</View>
		</BackgroundWrapper>
	);
};

...
